# nbody-wasm-sim

./: .gitignore  Cargo.toml  README.md  glue.js  index.html  nbody-wasm-sim-2ec07ffb6ff734d0.js  nbody-wasm-sim-2ec07ffb6ff734d0_bg.wasm  nbody-wasm-sim-46fcb2b66bff25fd.js  nbody-wasm-sim-46fcb2b66bff25fd_bg.wasm  nbody-wasm-sim-531df7fb94cd33d6.js  nbody-wasm-sim-9a2baa3326fc2c2d.js  nbody-wasm-sim-9a2baa3326fc2c2d_bg.wasm  nbody-wasm-sim-9edf7955bddb3f75.js  nbody-wasm-sim-9edf7955bddb3f75_bg.wasm  nbody-wasm-sim-aaec5d1ff2505a95.js  nbody-wasm-sim-aaec5d1ff2505a95_bg.wasm  nbody-wasm-sim-cb037e6c86df7008.js  nbody-wasm-sim-cb037e6c86df7008_bg.wasm  nbody-wasm-sim-d2c20956653bf291.js  nbody-wasm-sim-d2c20956653bf291_bg.wasm  nbody-wasm-sim-d681ccdd3974cdbf.js  nbody-wasm-sim-e0fd729994d90062.js  nbody-wasm-sim-eb7a9b2b226e315f.js  nbody-wasm-sim-eb7a9b2b226e315f_bg.wasm  nbody-wasm-sim-eda8928f35adf70b.js  nbody-wasm-sim-eda8928f35adf70b_bg.wasm  nbody-wasm-sim-f634068bb62aca2b.js  nbody-wasm-sim-f634068bb62aca2b_bg.wasm  wasm-glue.js
.cargo/: config.toml
.github/workflows/: build.yml  release.yml
assets/shaders/: frag.wgsl  vert.wgsl  wireframe.frag.wgsl  wireframe.vert.wgsl  world.vert.wgsl
src/: body.rs  canvas.rs  dom.rs  fps_counter.rs  frame_description.rs  lib.rs  log_list.rs  renderer.rs  runtime.rs  state.rs  wgpu_context.rs
src/gpu_primitives/: camera.rs  circle.rs  instance.rs  mod.rs  quad.rs  transform.rs  triangle.rs  vertex.rs  world_boundaries.rs  world_radius.rs  world_scale.rs
src/gpu_types/: camera.rs  world.rs
src/render/: camera.rs  frame_description.rs  frame_descriptor.rs  mod.rs  render_instance.rs  renderer.rs  shader.rs  texture.rs  wgpu_context.rs
src/render/camera/: camera.rs  mod.rs
src/render/gpu_types/: camera.rs  mod.rs  quad.rs  transform.rs  vertex.rs  world.rs
src/render/pipelines/: mod.rs  solid.rs  wireframe.rs  world.rs
src/shaders/: frag.wgsl  vert.wgsl
src/sim/: body.rs  geometry.rs  input.rs  mod.rs  particle.rs  physics.rs  simulation.rs  state.rs  world.rs
