[package]
name = "nbody-wasm-sim"
authors = ["Spencer C. Imbleau <spencer@imbleau.com>", "Sebastian Hamel"]
version = "0.1.0"
edition = "2021"

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size (aggressive)
opt-level = 'z'
# optimization for size
#opt-level = 's'
# link time optimization using using whole-program analysis
lto = true

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.81"
wasm-bindgen-futures = "0.4.31"
raw-window-handle = "0.5.0"
winit = "0.27.1"
gloo-console = "0.2.1"
instant = "0.1.12"
wgpu = { version = "0.13.1", features = ["webgl"] } # TODO: Years in the future when wgpu is stable, remove gl
glam = "0.21"
bytemuck = { version = "1.10.0", features = [ "derive" ] }
js-sys = "0.3.58"
nalgebra = "0.31.1"

[dependencies.rapier2d]
version = "0.14.0"
opt-level = 3
features = [ "wasm-bindgen" ]

[dependencies.web-sys]
version = "0.3.58"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'HtmlCanvasElement'
]

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
