[package]
name = "nbody-wasm-sim"
authors = ["Spencer C. Imbleau <spencer@imbleau.com>", "Sebastian Hamel"]
version = "0.1.0"
edition = "2021"

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size (aggressive)
opt-level = 'z'
# optimization for size
#opt-level = 's'
# link time optimization using using whole-program analysis
lto = true

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
raw-window-handle = "0.5.0"
winit = "0.27.5"
gloo-console = "0.2.3"
instant = "0.1.12"
wgpu = { version = "0.14.2", features = ["webgl"] } # TODO: Years in the future when wgpu is stable, remove gl
glam = "0.22.0"
bytemuck = { version = "1.12.3", features = [ "derive" ] }
js-sys = "0.3.60"
nalgebra = { version = "0.31.4", features = ["convert-glam021"] }
particular = "0.3.0"


[dependencies.rapier2d]
version = "0.16.1"
features = [ "wasm-bindgen"]

[dependencies.web-sys]
version = "0.3.60"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'HtmlCanvasElement'
]

[dependencies.image]
version = "0.24.5"
default-features = false
features = ["png", "jpeg"]